# FedC-MAMs

./: .gitignore  README.md  cmam_loss.py  eval_multimodal.py  missing_index.py  pyproject.toml  train_cmams.py  train_federated copy.py  train_federated.py  train_federated_cmams.py  train_incongruent.py  train_incongruent_federated.py  train_multimodal.py
config/: __init__.py  cmam_config.py  config.py  federated_cmam_config.py  federated_config.py  federated_incongruent_config.py  standard_config.py
configs/: mosei_tsne_config.yaml
configs/avmnist/: avmnist_multimodal.yaml  avmnist_multimodal_eval_only.yaml
configs/mosei/: mosei_1.yaml  mosei_2.yaml  mosei_3.yaml  train_mosei_multimodal.yaml
data/: __init__.py  avmnist.py  cmu_mosei_miss_dataset.py  federated_dataset.py  label_functions.py
data/config/: CMU_MOSEI_config.json
federated/: __init__.py  client.py  cmam_client.py  cmam_server.py  incongruent_client.py  incongruent_server.py  server.py
metrics/: __init__.py  mosi.py  similarity.py
models/: __init__.py  _redcore_mmin_model.py  avmnist.py  cmams.py  utt_fusion_model.py
models/networks/: __init__.py  autoencoder.py  classifier.py  fc.py  lstm.py  lstmvar.py  textcnn.py  textcnnvar.py  tools.py  transformer.py  xencoder.py
models/utils/: config.py  load_pretrained.py
scripts/: train_all.sh
scripts/avmnist/: avmnist_train_all_multimodal.sh  avmnist_train_cmams.sh
scripts/mosei/: _train_mosei_audio_cmams.sh  (+10 more)
utils/: __init__.py  io.py  logger.py  metric_recorder.py
visualisation/: latex.py  tsne.py  validation_plotting.py
(+73 files in other folders)
